--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
+
 {
+  "engines":{
+    "node":"24.0.2"
+  },
   "name": "airbnb",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+   "main": "app.js",
   "type": "commonjs",
   "scripts": {
-    "start": "node backend/app.js",
-    "dev": "nodemon backend/app.js"
-  },
+  "start": "node app.js"
+}
+,
   "keywords": [],
   "author": "",
   "license": "ISC",
